# Jump_ORAM

./: .gitignore  README.md
Jump_ORAM/: CMakeLists.txt  figures_stash_dataCache_size_to_access_delay.py  oram_efficiency.py
Jump_ORAM/log/: stash_size_128_dataCache_size_128.txt  stash_size_128_dataCache_size_16.txt  stash_size_128_dataCache_size_2.txt  stash_size_128_dataCache_size_256.txt  stash_size_128_dataCache_size_32.txt  stash_size_128_dataCache_size_4.txt  stash_size_128_dataCache_size_512.txt  stash_size_128_dataCache_size_64.txt  stash_size_128_dataCache_size_8.txt  stash_size_16_dataCache_size_128.txt  stash_size_16_dataCache_size_16.txt  stash_size_16_dataCache_size_2.txt  stash_size_16_dataCache_size_256.txt  stash_size_16_dataCache_size_32.txt  stash_size_16_dataCache_size_4.txt  stash_size_16_dataCache_size_512.txt  stash_size_16_dataCache_size_64.txt  stash_size_16_dataCache_size_8.txt  stash_size_256_dataCache_size_128.txt  stash_size_256_dataCache_size_16.txt  stash_size_256_dataCache_size_2.txt  stash_size_256_dataCache_size_256.txt  stash_size_256_dataCache_size_32.txt  stash_size_256_dataCache_size_4.txt  stash_size_256_dataCache_size_512.txt  stash_size_256_dataCache_size_64.txt  stash_size_256_dataCache_size_8.txt  stash_size_2_dataCache_size_128.txt  stash_size_2_dataCache_size_16.txt  stash_size_2_dataCache_size_2.txt  stash_size_2_dataCache_size_256.txt  stash_size_2_dataCache_size_32.txt  stash_size_2_dataCache_size_4.txt  stash_size_2_dataCache_size_512.txt  stash_size_2_dataCache_size_64.txt  stash_size_2_dataCache_size_8.txt  stash_size_32_dataCache_size_128.txt  stash_size_32_dataCache_size_16.txt  stash_size_32_dataCache_size_2.txt  (+42 more)
Jump_ORAM/src/: client.cc  (+10 more)
Path_ORAM/: CMakeLists.txt
(+12 files in other folders)
